# catanatron

./: .dockerignore  .gitattributes  .gitignore  .readthedocs.yml  CODEX_PLAN.md  CODEX_PLAN_HEURISTIC_AND_VALUE.md  CODEX_PLAN_HEURISTIC_PLACEMENT.md  CODEX_PLAN_MPS_OPTIMIZATION.md  CODEX_PLAN_VISUALIZATION.md  CODE_OF_CONDUCT.md  CatanAgent.py  Dockerfile  Dockerfile.paperspace  Dockerfile.web  GAME_ENGINE_SETUP.md  Game_Testing.ipynb  Gym_Testing.ipynb  Makefile  Pipfile  Procfile  README.md  RESULTS_LOG.md  algorithms.py  all-requirements.txt  analyze_placements.py  artillery-stress-test.yml  autokeras-model.py  autokeras.py  benchmark.py  bryan.py  catanatron.setup.py  catanatron_gym.setup.py  create_feature_matrix.py  database.py  dev-requirements.txt  docker-compose.yml  env8.yml  environment.yml  evo.py  hello-keras.py  (+22 more)
.context/: codex-session-id
.cursor/: mcp.json
.ps_project/: config.yaml
.venv311/: pyvenv.cfg
Training_data/: 322a093d-316f-4393-870f-f9f64e26691f.csv  533dd71a-984c-4237-8930-fad4df726709.csv
board-tensor-model-dr/: saved_model.pb
capstone_agent/: AgentRouter.py  CONFIG.py  CONSTANTS.py  CapstoneAgent.py  CapstoneModel.py  MainPlayAgent.py  MainPlayModel.py  PLACEMENT_GUIDE.md  PPOHyperparams.py  PlacementAgent.py  PlacementModel.py  RolloutBuffer.py  __init__.py  action_map.py  analytics.py  benchmark_placement.py  collect_compact_placement_data.py  collect_placement_data.py  device.py  import_replays_to_gui.py  placement_action_space.py  placement_data.npz  placement_features.py  placement_model.pt  placement_supervised_dataset.py  plot_benchmarks.py  plot_ppo_training_csv.py  plot_training.py  router_search_player.py  run_simulation.py  train_compact_placement_online.py  train_compact_placement_supervised.py  train_placement.py  train_placement_online.py  training_loop.py
capstone_models/: CapstoneModel.py
catan_rayrl/: catanmultiagentenv.py  ray_simple.py  ray_training.py  self_play.py  tf-metal.yaml
catanatron/: algorithms.py  coordinate_system.py  game.py  json.py  main.py  models.py  state.py  state_functions.py
catanatron_compiled/: setup.py
catanatron_core/: setup.py
catanatron_env/: README.md  pyproject.toml  sample.py
catanatron_experimental/: setup.py
catanatron_gym/: .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  sample.py  setup.py
catanatron_gym/catanatron_gym/: __init__.py  board_tensor_features.py  features.py
catanatron_gym/catanatron_gym/envs/: __init__.py  catanatron_env.py
catanatron_gym/envs/: __init__.py  catanatron_env.py
catanatron_rust/: Cargo.toml  README.md  pyproject.toml
catanatron_rust/benches/: copy_benchmark.rs
catanatron_rust/src/: actions.rs  deck_slices.rs  decks.rs  enums.rs  game.rs  global_state.rs  lib.rs  main.rs  map_instance.rs  map_template.rs  move_generation.rs  ordered_hashmap.rs  player.rs  state.rs  state_functions.rs  state_vector.rs
catanatron_rust/src/players/: mod.rs  random_player.rs
catanatron_rust/src/python/: README.md  action.rs  game.rs  mod.rs  player.rs  state.rs
catanatron_rust/src/state/: move_application.rs  move_generation.rs  mutations.rs
catanatron_rust/tests/: integration_test.rs  simple_test.rs
catanatron_server/: __init__.py  api.py  database.py  models.py  server.py  setup.py  utils.py  wsgi.py
docs/: BLOG_POST.md  RESULTS_LOG.md  modules.rst  requirements.txt
documentation/: README.md  SUMMARY.md  contributing-1.md  contributing.md  core-concepts.md  game-trees.md
examples/: Overview.ipynb  custom_accumulator.py  custom_player.py  gnn_example.py  gym_example.py  gym_vectorized_example.py  library_example.py  llm_player_example.py  my_player.py  play_batch_example.py  render_example.py  sb3_contrib_example.py
experimental/: Dockerfile  bayesian.py  binary-problem.py  catan-dql-tutorial.py  catan-dqn-tutorial.py  cross-entropy-method.py  data_logger.py  datasets.py  dql-tutorial.py  dqn.py  dqn_player.py  learn-to-and.py  learn-to-count.py  make-board-tf-features.py  normalizer.py  play.py  rep-a-value-model.py  rep-b-mixed-data-model.py  rep_a_model.py  rep_b_model.py  simple-cnn-learning.py  simple_alpha_zero.py  simple_forest.py  simple_model.py  spsa.py  tensorforce_player.py  tf-dataset-train.py  train.py
machine_learning/: board_tensor_features.py  features.py  plot.py  utils.py
my-data-path/: 002227ca-bae2-4dbe-af2d-57acca773a84.json  019645cd-69dc-489a-976f-baa66afa0880.json  01c21cca-a47e-4b07-91b5-d06dd6c84d9e.json  026257b5-11f9-49f0-b873-6b78be03bd51.json  02dac5d6-82d0-4ce9-a0d4-363629a03822.json  0387a345-e69a-466d-8ed6-da0bba460d88.json  040e02fb-b425-46d5-822e-d688534d1754.json  049f01d1-f015-4d94-b7d1-ad2fbce92ba8.json  04ede570-3b71-47c0-add1-0a72b162dc37.json  071d89ee-8d43-472f-a5ff-e8692098d321.json  0748ac4b-6f88-48c8-b9e2-8928913bc9db.json  0a63362f-4d7a-4c56-a1b0-6f366a0c0fe1.json  0b242cf7-1037-47ee-8bd9-d35f42ad7819.json  0ca6af05-216f-4fb9-a464-7cac5a7640e7.json  0cc2e5be-75de-4e57-b840-2962cc70f354.json  0e3feace-9adb-41c7-833f-7658bf27054e.json  0ef6454e-6d66-4cf3-b884-c76fdbd074a2.json  10962098-67ba-41a7-91ad-bccefe0201d4.json  12b1b8ad-1735-402c-8295-4701a1aceb71.json  (+181 more)
ray-rl/: ray_env.py  (+5 more)
(+895 files in other folders)
