[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["catanatron_gym"]

[project]
name = "catanatron_gym"
version = "5.0.0"
description = "Gymnasium for Settlers of Catan"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = ["gymnasium", "pre-commit", "catanatron", "numpy"]

[project.urls]
Homepage = "https://github.com/bcollazo/catanatron"
