[package]
name = "catanatron_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "catanatron_rust"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "catanatron_rust"
path = "src/main.rs"

[dependencies]
rand = "0.8"
pyo3 = { version = "0.19", features = ["extension-module"] }
log = "0.4.26"
env_logger = "0.11.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "copy_benchmark"
harness = false
